# KubeSherlock

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  NEW_FILES_MANIFEST.txt  PRE_LAUNCH_CHECKLIST.md  PROJECT_OVERVIEW.md  TESTING_STEPS.md  config.env  config.env.example  docker-compose.yml  email_preview_critical.html  email_preview_critical_enhanced.html  email_preview_high.html  email_preview_high_enhanced.html  email_preview_low.html  email_preview_low_enhanced.html  email_preview_medium.html  email_preview_medium_enhanced.html  interview_showcase.md  prometheus.yml  pyproject.toml  readme.md  requirements.txt  setup-local.sh  smoke_test.py
agent/: __init__.py  __main__.py  events.py  integration.py  investigator.py  llm.py  mcp_client.py  memory.py  metrics.py  metrics_server.py  notifier.py  prompts.py  requirements.txt  severity.py  watcher.py
database/: __init__.py  db.py  schema.sql
docs/: EMAIL_ALERTS.md  IMPROVEMENTS.md  TESTING_COMMANDS.md
docs/architecture/: OVERVIEW.md
docs/guides/: EMAIL_ALERTS_VERIFICATION.md  QUICKSTART.md  TESTING.md
docs/reference/: API.md  CONFIGURATION.md
examples/: __init__.py  full_monitoring_example.py
helm/: crashing-pods.yaml  test-stack.yaml  test-values.yaml
helm/kubesherlock/: Chart.yaml  README.md  kubesherlock-1.0.0.tgz  logs.txt  secrets.txt  values.yaml
k8s_mcp/: __init__.py  client.py  logging_config.py  requirements.txt  security.py  server.py
k8s_mcp/tools/: actions.py  (+13 more)
mail/: email_preview_critical.html  email_preview_high.html  email_preview_medium.html
tests/: test_events.py  test_html_template.py  test_investigator.py  test_k8s_mcp.py  test_k8s_tools_extended.py  test_llm.py  test_memory.py  test_notifier.py  test_postgres_integration.py  test_prometheus_integration.py  test_severity.py  test_watcher_email_integration.py  test_watcher_unit.py
(+7 files in other folders)
