[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kubesherlock"
version = "1.0.0"
description = "AI-powered Kubernetes incident investigation agent"
readme = "readme.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "KubeSherlock Contributors"}
]
keywords = ["kubernetes", "k8s", "ai", "debugging", "incident-response", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.49.0",
    "openai>=1.82.0",
    "kubernetes>=29.0.0",
    "mcp[cli]>=1.3.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "prometheus-client>=0.21.0",
    "asyncpg>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.25.0",
]

[project.scripts]
kubesherlock = "agent.__main__:main"
kubesherlock-watcher = "agent.watcher:main"
kubesherlock-server = "k8s_mcp.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/kubesherlock"
Issues = "https://github.com/yourusername/kubesherlock/issues"
Documentation = "https://github.com/yourusername/kubesherlock/blob/main/readme.md"

[tool.setuptools.packages.find]
include = ["k8s_mcp*", "agent*", "database*"]
exclude = ["tests*", "docs*", "examples*"]
